<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    tools:context=".view.EnderecoView">

        <include
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            layout="@layout/toolbar_layout" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/toolbar"
            android:layout_above="@+id/bottomNavigationView">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="40dp"
                android:orientation="vertical"
                android:paddingHorizontal="40dp"
                android:scrollbarAlwaysDrawVerticalTrack="true">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/titulo_cadastrarendereco"
                    android:textSize="30sp"
                    android:layout_marginVertical="20dp"
                    android:fontFamily="@font/arciform" />

                <EditText
                    android:id="@+id/campo_cep"
                    android:hint="@string/campo_cep"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@drawable/edittext_bg"
                    android:inputType="number"
                    android:padding="10dp"
                    android:maxLength="8" />

                <EditText
                    android:id="@+id/campo_logradouro"
                    android:hint="@string/campo_logradouro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@drawable/edittext_bg"
                    android:inputType="text"
                    android:padding="10dp" />

                <EditText
                    android:id="@+id/campo_numero"
                    android:hint="@string/campo_numero"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@drawable/edittext_bg"
                    android:inputType="text"
                    android:padding="10dp" />

                <EditText
                    android:id="@+id/campo_bairro"
                    android:hint="@string/campo_bairro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@drawable/edittext_bg"
                    android:inputType="text"
                    android:padding="10dp" />

                <EditText
                    android:id="@+id/campo_cidade"
                    android:hint="@string/campo_cidade"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@drawable/edittext_bg"
                    android:inputType="text"
                    android:padding="10dp" />

                <EditText
                    android:id="@+id/campo_estado"
                    android:hint="@string/campo_estado"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@drawable/edittext_bg"
                    android:inputType="text"
                    android:padding="10dp" />

                <Button
                    android:id="@+id/button_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorButton"
                    android:textColor="@color/colorWhite"
                    android:layout_marginVertical="24dp"
                    android:paddingHorizontal="20dp"
                    android:layout_gravity="center"
                    android:text="@string/register_button" />
            </LinearLayout>
        </ScrollView>

    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        layout="@layout/bottom_layout" />

</RelativeLayout>
