<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.AlterarSenhaView">

    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/toolbar_layout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingHorizontal="40dp"
        android:scrollbarAlwaysDrawVerticalTrack="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/arciform"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/alterar_senha_title"
            android:textSize="30dp" />

        <EditText
            android:id="@+id/alterar_senha_antiga"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/edittext_bg"
            android:hint="@string/alterar_senha_antiga"
            android:inputType="textPassword"
            android:padding="10dp" />

        <EditText
            android:id="@+id/alterar_senha_nova"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/edittext_bg"
            android:hint="@string/alterar_senha_nova"
            android:inputType="textPassword"
            android:padding="10dp" />

        <EditText
            android:id="@+id/alterar_senha_nova_confirmacao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/edittext_bg"
            android:hint="@string/alterar_senha_nova_confirmacao"
            android:inputType="textPassword"
            android:padding="10dp" />

        <Button
            android:id="@+id/alterar_senha_btn_salvar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorButton"
            android:textColor="@color/colorWhite"
            android:layout_marginVertical="24dp"
            android:paddingHorizontal="20dp"
            android:text="@string/salvar" />
    </LinearLayout>

    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        layout="@layout/bottom_layout" />
</RelativeLayout>
