<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    tools:context=".view.DenunciaLocalView">

    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/toolbar_layout" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottomNavigationView"
        android:layout_below="@+id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingHorizontal="40dp"
            android:paddingBottom="40dp"
            android:scrollbarAlwaysDrawVerticalTrack="true">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20dp"
                android:fontFamily="@font/arciform"
                android:gravity="center"
                android:text="@string/denuncia_local_title"
                android:textSize="30sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/denuncia_local_subtitle" />

            <Button
                android:id="@+id/denuncia_local_btn_endereco_informar"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/denuncia_local_btn_endereco" />

            <Button
                android:id="@+id/denuncia_local_btn_endereco_gps"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/denuncia_local_btn_gps" />

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/lav_thumbDown"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:visibility="gone"
                app:lottie_autoPlay="true"
                app:lottie_fileName="lottie-location-pin-on-a-map.json"
                app:lottie_loop="true" />

            <LinearLayout
                android:id="@+id/denuncia_local_ll_endereco"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/denuncia_local_tv_endereco" />

                <EditText
                    android:id="@+id/denuncia_local_et_endereco"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@drawable/edittext_bg"
                    android:enabled="false"
                    android:padding="10dp"
                    android:textAlignment="center"
                    android:textColor="@color/colorText" />

                <ImageView
                    android:id="@+id/denuncia_local_iv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/denuncia_local_btn_editar_endereco"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/denuncia_local_btn_editar_endereco" />

                <Button
                    android:id="@+id/denuncia_local_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="24dp"
                    android:background="@color/colorButton"
                    android:paddingHorizontal="20dp"
                    android:text="@string/denuncia_local_btn"
                    android:textColor="@color/colorWhite" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        layout="@layout/bottom_layout" />

</RelativeLayout>
